--- a/src/assets/css/venue.css
+++ b/src/assets/css/venue.css
@@ -134,6 +134,12 @@ html,body {
   cursor: pointer;
 }
 
+/*Navbar*/
+.navbar-logo {
+  /*margin: auto;*/
+  /*margin-top: -30px;*/
+}
+
 /* InputField Styles */
 .input-field-container {
   position: relative;
