--- a/src/assets/css/venue.css
+++ b/src/assets/css/venue.css
@@ -371,3 +371,10 @@ a:active {
   font-weight: bold;
   color: #add5ff;
 }
+
+/*Medium devices (tablets and below)*/
+@media (max-width: 1128px) {
+  .no-container {
+    text-align: center;
+  }
+}
