Keep footer at bottom of page

--- a/src/assets/css/venue.css
+++ b/src/assets/css/venue.css
@@ -9,6 +9,7 @@ html,body {
   background: #FCFEFF;
   font-family: "Ubuntu Mono";
   font-weight: normal;
+  height: 100%;
   /*font-size: 16px;*/
 }
 
