--- a/src/assets/css/venue-core.css
+++ b/src/assets/css/venue-core.css
@@ -348,7 +348,7 @@
 }
 
  .dashboard-section-modal .course-pill {
-   width: 420px;
+   width: 450px;
    height: 80px;
    position: relative;
    cursor: pointer;
@@ -371,12 +371,19 @@
 .course-pill .background-pillar {
   position: absolute;
   background-color: red;
-  left: -2.5%;
-  top: -10%;
+  left: -1%;
+  top: -6%;
   border-radius: 5px;
-  width: 105%;
+  width: 102%;
   height: 90%;
   z-index: 1;
+  transition: left 0.25s, top 0.25s, width 0.25s;
+}
+
+.course-pill:hover .background-pillar {
+  top: -8%;
+  width: 104%;
+  left: -2%;
 }
 
 .dashboard-section-modal .course-pill .pill-left,
@@ -465,4 +472,19 @@ custom-scrollbar::-webkit-scrollbar-thumb {
 .big-button:hover {
   border: 2px solid rgba(44, 62, 80, 1);
   box-shadow: 0px 3px 5px rgba(44, 62, 80, 0.2);
+}
+
+.center-fill-section {
+  height: 150px;
+  width: 200px;
+  line-height: 150px;
+  text-align: center;
+}
+
+a {
+  color: inherit;
+}
+
+a:hover {
+  color: inherit;
 }
