--- a/src/assets/css/venue-core.css
+++ b/src/assets/css/venue-core.css
@@ -406,7 +406,13 @@ body, * {
 .student-attendance .month-area {
   margin-bottom: 20px;
   margin-left: 50px;
+  margin-right: 50px;
   margin-top: 20px;
+}
+
+.attendance-history-container {
+  margin-left: 50px;
+  margin-right: 50px;
 }
 
 .instructor-attendance .month-area.mobile,
@@ -599,6 +605,7 @@ a:hover {
 .lecture-pill-min {
   width: 310px;
   height: 35px;
+  line-height: 28px;
   display: inline-block;
   margin-right: 15px;
   padding-left: 10px;
@@ -688,4 +695,49 @@ a:hover {
 .mobile-event-pill-area .mobile-pill .day-of-month {
   font-size: 1.5rem;
   font-weight: bold;
+}
+
+.course-info-upcoming-lecture-pill {
+  display: inline-block;
+  vertical-align: top;
+  width: 350px;
+  height: 40px;
+  position: relative;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  margin-right: 20px;
+}
+
+.course-info-upcoming-lecture-pill .foreground-pill {
+  width: 100%;
+  height: 100%;
+  background-color: white;
+  box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.15);
+  position: relative;
+  z-index: 2;
+  padding: 0px 20px;
+  border-radius: 5px;
+}
+
+.course-info-upcoming-lecture-pill .background-pill {
+  position: absolute;
+  z-index: 1;
+  top: -15%;
+  left: -2%;
+  width: 104%;
+  height: 100%;
+  background-color: #01B1FC;
+  border-radius: 5px;
+}
+
+.course-info-upcoming-lecture-pill .lecture-title,
+.course-info-upcoming-lecture-pill .lecture-date {
+  display: inline-block;
+  vertical-align: top;
+  position: relative;
+  top: 7px;
+}
+
+.course-info-upcoming-lecture-pill .lecture-date {
+  float: right;
 }
