Courseinfo accessibility, minus the pill color contrast

--- a/src/assets/css/venue-core.css
+++ b/src/assets/css/venue-core.css
@@ -203,6 +203,10 @@ body, * {
   cursor: pointer;
 }
 
+.course-info-sub-tab .left .tab:focus{
+  font-weight: bolder;
+}
+
 .course-info-sub-tab .left .tab.active {
   font-weight: bold;
 }
