--- a/src/assets/css/venue-core.css
+++ b/src/assets/css/venue-core.css
@@ -455,7 +455,7 @@ body, * {
 
 .dashboard-section-modal {
   width: 50%;
-  height: 18rem;
+  height: 20rem;
   display: inline-block;
   vertical-align: top;
 }
@@ -467,7 +467,8 @@ body, * {
 
 .dashboard-section-modal .sub-section {
   margin: 1rem 1rem;
-  height: 14rem;
+  height: 16rem;
+  padding-bottom: 2rem;
   overflow-y: auto;
 }
 
