Comment out old dashboard

--- a/src/assets/css/venue.css
+++ b/src/assets/css/venue.css
@@ -379,8 +379,7 @@ a:active {
   }
 }
 
-.dashboard-section {
-  /*border: red solid;*/
+/*.dashboard-section {
   text-align: left;
   margin-top: 4rem;
   display: inline-block;
@@ -388,7 +387,7 @@ a:active {
   height: 15rem;
   width: 100%;
   margin: 0 8rem;
-}
+}*/
 
 .active-section {
   float: left;
@@ -437,7 +436,7 @@ a:active {
 }
 
 /*Medium devices (tablets and below)*/
-@media (max-width: 1128px) {
+/*@media (max-width: 1128px) {
   .dashboard-section {
     text-align: center;
     height: auto;
@@ -458,4 +457,4 @@ a:active {
   #no-today {
     margin-left: auto;
   }
-}
+}*/
