attendance history pill color corection

--- a/src/assets/css/venue-core.css
+++ b/src/assets/css/venue-core.css
@@ -352,28 +352,28 @@ body, * {
 .instructor-attendance-history-pill .percentage-area::before {
   content: '';
   position: absolute;
-  border-right: 16px solid green;
-  border-bottom: 32px solid green;
-  border-top: 32px solid transparent;
-  border-left: 16px solid transparent;
+  border-right: 15px solid green;
+  border-bottom: 31px solid green;
+  border-top: 31px solid transparent;
+  border-left: 15px solid transparent;
   left: -30px;
 }
 
 
 .instructor-attendance-history-pill.good {
-  border: 2px solid #24E565;
+  border: 2px solid #04852f;
   box-shadow: 0px 3px 10px rgba(65, 162, 91, 0.33);
 }
 .instructor-attendance-history-pill.good .date-area {
-  background-color: #24E565;
+  background-color: #04852f;
 }
 .instructor-attendance-history-pill.good .percentage-area {
-  background-color: #24E565;
+  background-color: #04852f;
 }
 
 .instructor-attendance-history-pill.good .percentage-area::before {
-  border-right: 16px solid #24E565;
-  border-bottom: 32px solid #24E565;
+  border-right: 15px solid #04852f;
+  border-bottom: 31px solid #04852f;
 }
 
 .instructor-attendance-history-pill.good:hover,
@@ -383,19 +383,19 @@ body, * {
 }
 
 .instructor-attendance-history-pill.medium {
-  border: 2px solid #E97E47;
+  border: 2px solid #b95726;
   box-shadow: 0px 3px 10px rgba(233, 126, 71, 0.36);
 }
 .instructor-attendance-history-pill.medium .date-area {
-  background-color: #E97E47;
+  background-color: #b95726;
 }
 .instructor-attendance-history-pill.medium .percentage-area {
-  background-color: #E97E47;
+  background-color: #b95726;
 }
 
 .instructor-attendance-history-pill.medium .percentage-area::before {
-  border-right: 16px solid #E97E47;
-  border-bottom: 32px solid #E97E47;
+  border-right: 15px solid #b95726;
+  border-bottom: 31px solid #b95726;
 }
 
 .instructor-attendance-history-pill.medium:hover,
@@ -416,8 +416,8 @@ body, * {
 }
 
 .instructor-attendance-history-pill.bad .percentage-area::before {
-  border-right: 16px solid rgb(209, 62, 52);
-  border-bottom: 32px solid rgb(209, 62, 52);
+  border-right: 15px solid rgb(209, 62, 52);
+  border-bottom: 31px solid rgb(209, 62, 52);
 }
 
 .instructor-attendance-history-pill.bad:hover,
@@ -712,7 +712,7 @@ a:hover {
 }
 
 .mobile-event-pill-area .mobile-pill.good {
-  border: 3px solid #24E565;
+  border: 3px solid #04852f;
   box-shadow: 0px 3px 10px rgba(65, 162, 91, 0.33);
 }
 
@@ -723,7 +723,7 @@ a:hover {
 }
 
 .mobile-event-pill-area .mobile-pill.medium {
-  border: 3px solid #E97E47;
+  border: 3px solid #b95726;
   box-shadow: 0px 3px 10px rgba(233, 126, 71, 0.36);
 }
 
