--- a/src/assets/css/venue-core.css
+++ b/src/assets/css/venue-core.css
@@ -705,6 +705,7 @@ a:hover {
   width: 60px;
   height: 60px;
   margin-right: 15px;
+  margin-bottom: 15px;
   text-align: center;
   box-sizing: border-box;
   padding: 3px 0px;
