--- a/src/assets/css/venue-core.css
+++ b/src/assets/css/venue-core.css
@@ -782,7 +782,50 @@ a:hover {
   float: right;
 }
 
+.btn {
+  border-radius: 0.25rem;
+}
+
 .btn.btn-primary {
+  background: none;
+  border: 0.1rem solid #0078c2;
+  color: #0078c2
+}
+
+.btn.btn-secondary {
+  background: none;
+  border: 0.1rem solid #727272;
+  color: #727272;
+}
+
+.btn.btn-primary:hover,
+.btn.btn-primary:focus,
+.btn.btn-primary:active,
+.btn.btn-primary:target {
+  outline: none;
+  border: 0.1rem solid #0078c2;
+  background: #0078c2;
+  color: white
+}
+
+.btn.btn-secondary:hover,
+.btn.btn-secondary:focus,
+.btn.btn-secondary:active
+.btn.btn-secondary:target {
+  outline: none;
+  border: 0.1rem solid #727272;
+  background: #727272;
+  color: white;
+}
+
+input {
+  border: 0.1rem solid #0078c2 !important;
+  color: #0078c2 !important;
+  border-radius: 0.25rem !important;
+}
+
+
+/* .btn.btn-primary {
   background: #0078c2;
   border: 0.1rem solid #005183;
 }
@@ -808,4 +851,4 @@ a:hover {
   outline: none;
   border: 0.1rem solid #444444;
   background: #444444;
-}
+} */
