--- a/src/assets/css/venue-core.css
+++ b/src/assets/css/venue-core.css
@@ -182,6 +182,7 @@ body, * {
 .course-info-sub-tab {
   margin-left: 44px;
   margin-top: 32px;
+  height: 2.5rem;
 }
 
 .course-info-sub-tab.mobile {
@@ -250,6 +251,7 @@ body, * {
 
 .student-attendance-pill .date-area {
   width: 50px;
+  margin-left: -15px;
   background-color: red;
   height: 100%;
   text-align: center;
@@ -293,8 +295,7 @@ body, * {
 .instructor-attendance-history-pill {
   border: 2px solid red;
   border-radius: 5px;
-  margin-right: 40px;
-  margin-bottom: 25px;
+  margin: 0.5rem;
   position: relative;
   width: 340px;
   height: 65px;
@@ -304,6 +305,18 @@ body, * {
 
 .instructor-attendance-history-pill .date-area {
   width: 20%;
+  margin-left: -15px;
+  background-color: red;
+  height: 100%;
+  text-align: center;
+  color: white;
+  line-height: 22px;
+  margin-right: 15px;
+}
+
+.student-attendance .instructor-attendance-history-pill .date-area {
+  width: 20%;
+  margin-left: -15px;
   background-color: red;
   height: 100%;
   text-align: center;
@@ -435,6 +448,7 @@ body, * {
 }
 
 .attendance-history-container {
+  text-align: center;
   margin-left: 50px;
   margin-right: 50px;
 }
@@ -446,6 +460,7 @@ body, * {
 }
 
 .instructor-attendance .event-pills-area {
+  text-align: center;
   margin-left: 50px;
 }
 
@@ -634,7 +649,7 @@ a:hover {
 .lecture-pills-min-container {
   padding-left: 4rem;
   box-sizing: border-box;
-  width: 70%;
+  /* width: 70%; */
 }
 
 .lecture-pills-min-container .label {
@@ -699,12 +714,16 @@ a:hover {
   font-size: 0.9rem;
 }
 
+.mobile-event-pill-area {
+  text-align: center;
+}
+
 .mobile-event-pill-area .mobile-pill {
   display: inline-block;
   border: 3px solid black;
   width: 60px;
   height: 60px;
-  margin-right: 15px;
+  margin: 0.5rem;
   text-align: center;
   box-sizing: border-box;
   padding: 3px 0px;
