--- a/src/assets/css/venue-core.css
+++ b/src/assets/css/venue-core.css
@@ -251,7 +251,7 @@ body, * {
 
 .student-attendance-pill .date-area {
   width: 50px;
-  margin-left: -15px;
+  /* margin-left: -15px; */
   background-color: red;
   height: 100%;
   text-align: center;
@@ -295,7 +295,8 @@ body, * {
 .instructor-attendance-history-pill {
   border: 2px solid red;
   border-radius: 5px;
-  margin: 0.5rem;
+  margin-right: 1rem;
+  margin-bottom: 1rem;
   position: relative;
   width: 340px;
   height: 65px;
@@ -305,7 +306,7 @@ body, * {
 
 .instructor-attendance-history-pill .date-area {
   width: 20%;
-  margin-left: -15px;
+  /* margin-left: -15px; */
   background-color: red;
   height: 100%;
   text-align: center;
@@ -316,7 +317,7 @@ body, * {
 
 .student-attendance .instructor-attendance-history-pill .date-area {
   width: 20%;
-  margin-left: -15px;
+  /* margin-left: -15px; */
   background-color: red;
   height: 100%;
   text-align: center;
@@ -459,8 +460,8 @@ body, * {
   margin-right: 0rem;
 }
 
-.instructor-attendance .event-pills-area {
-  text-align: center;
+.event-pills-area {
+  /* text-align: center; */
   margin-left: 50px;
 }
 
@@ -715,7 +716,7 @@ a:hover {
 }
 
 .mobile-event-pill-area {
-  text-align: center;
+  /* text-align: center; */
 }
 
 .mobile-event-pill-area .mobile-pill {
@@ -723,12 +724,8 @@ a:hover {
   border: 3px solid black;
   width: 60px;
   height: 60px;
-<<<<<<< HEAD
-  margin: 0.5rem;
-=======
-  margin-right: 15px;
-  margin-bottom: 15px;
->>>>>>> master
+  margin-right: 1rem;
+  margin-bottom: 1rem;
   text-align: center;
   box-sizing: border-box;
   padding: 3px 0px;
