--- a/src/assets/css/venue-core.css
+++ b/src/assets/css/venue-core.css
@@ -104,7 +104,6 @@ body, * {
   text-align: center;
   color: #C1EDFF;
   border-radius: 2px;
-  cursor: pointer;
 }
 
 .venue-body-container .course-info-title .course-time-block {
@@ -113,9 +112,8 @@ body, * {
 }
 
 .course-info-title.mobile {
-  width: 80%;
-  margin: 0 auto;
-  margin-top: 20px;
+  margin: 0rem 2rem;
+  margin-top: 1rem;
   padding: 2rem 0;
   border-radius: 5px;
   box-shadow: 0px 3px 6px rgba(0, 62, 123, 0.2);
@@ -137,7 +135,6 @@ body, * {
   margin-bottom: 5px;
   color: #C1EDFF;
   border-radius: 2px;
-  cursor: pointer;
 }
 
 .venue-body-container .weekly-attendance-bar {
