--- a/src/assets/css/venue-core.css
+++ b/src/assets/css/venue-core.css
@@ -622,6 +622,7 @@ custom-scrollbar::-webkit-scrollbar-thumb {
   box-shadow: 0px 3px 5px rgba(44, 62, 80, 0.1);
   cursor: pointer;
   transition: border 0.25s, box-shadow 0.25s;
+  margin: 0.5rem;
 }
 
 .big-button:hover,
