--- a/src/assets/css/venue-core.css
+++ b/src/assets/css/venue-core.css
@@ -94,6 +94,7 @@ body {
   padding: 40px 30px;
   box-shadow: 0px 3px 6px rgba(0, 62, 123, 0.2);
   border-radius: 5px;
+  margin-right: 2rem;
 }
 
 .venue-body-container .course-info-title .course-name {
@@ -666,6 +667,7 @@ a:hover {
 
 .lecture-pills-min-container .label {
   width: 8rem;
+  font-size: 1.2rem;
 }
 
 .lecture-pill-min {
