--- a/src/assets/css/venue-core.css
+++ b/src/assets/css/venue-core.css
@@ -184,6 +184,7 @@ body {
 
 .course-info-sub-tab {
   margin: 1rem 0rem;
+  margin-bottom: 0rem;
   height: 2.5rem;
 }
 
@@ -289,15 +290,50 @@ body {
   /* padding-left: 50px; */
 }
 
+.attendance-history-pill-background {
+  width: 30rem;
+  max-width: 100%;
+  height: 5rem;
+  padding: 0.25rem;
+  margin: 0.25rem;
+  background: none;
+  border-radius: 0.25rem;
+  border: 0.25rem solid rgba(0,0,0,0);
+  display: inline-block;
+}
+
+.courseinfo-legend {
+  display: inline-block;
+  margin: 0.25rem;
+  padding: 0.25rem 0.5rem;
+}
+
+.courseinfo-legend.mobile {
+  margin-top: 3rem;
+}
+
+.live-border {
+  border: 0.25rem dashed #04852f;
+}
+
+.playback-border {
+  border: 0.25rem dotted #683eca;
+}
+
+.courseinfo-attendance-listing {
+  text-align: left;
+  margin: 0rem 2rem;
+}
+
 .instructor-attendance-history-pill {
   border: 2px solid red;
   border-radius: 5px;
   margin-right: 1rem;
   margin-bottom: 1rem;
   position: relative;
-  width: 340px;
+  width: 100%;
   max-width: 100%;
-  height: 4rem;
+  height: 100%;
   cursor: pointer;
   color: #2c3e50;
 }
@@ -379,7 +415,7 @@ body {
   content: '';
   position: absolute;
   /* border-right: 0rem solid #d13e34; */
-  /* border-bottom: 3.8rem solid #d13e34; */
+  /* border-bottom: 3.9rem solid #d13e34; */
   border-top: 0rem solid transparent;
   border-left: 2rem solid transparent;
   right: 100%;
@@ -388,7 +424,7 @@ body {
 
 .instructor-attendance-history-pill.good {
   border: 2px solid #04852f;
-  box-shadow: 0px 3px 10px rgba(65, 162, 91, 0.33);
+  /* box-shadow: 0px 3px 10px rgba(65, 162, 91, 0.33); */
 }
 .instructor-attendance-history-pill.good .date-area {
   background-color: #04852f;
@@ -399,7 +435,7 @@ body {
 
 .instructor-attendance-history-pill.good .percentage-area::before {
   border-right: 0rem solid #04852f;
-  border-bottom: 3.8rem solid #04852f;
+  border-bottom: 3.9rem solid #04852f;
 }
 
 .instructor-attendance-history-pill.good:hover,
@@ -410,7 +446,7 @@ body {
 
 .instructor-attendance-history-pill.medium {
   border: 2px solid #b95726;
-  box-shadow: 0px 3px 10px rgba(233, 126, 71, 0.36);
+  /* box-shadow: 0px 3px 10px rgba(233, 126, 71, 0.36); */
 }
 .instructor-attendance-history-pill.medium .date-area {
   background-color: #b95726;
@@ -421,7 +457,7 @@ body {
 
 .instructor-attendance-history-pill.medium .percentage-area::before {
   border-right: 0rem solid #b95726;
-  border-bottom: 3.8rem solid #b95726;
+  border-bottom: 3.9rem solid #b95726;
 }
 
 .instructor-attendance-history-pill.medium:hover,
@@ -432,7 +468,7 @@ body {
 
 .instructor-attendance-history-pill.bad {
   border: 2px solid #d13e34;
-  box-shadow: 0px 3px 10px rgba(255, 99, 88, 0.36);
+  /* box-shadow: 0px 3px 10px rgba(255, 99, 88, 0.36); */
 }
 .instructor-attendance-history-pill.bad .date-area {
   background-color: #d13e34;
@@ -443,13 +479,18 @@ body {
 
 .instructor-attendance-history-pill.bad .percentage-area::before {
   border-right: 0rem solid #d13e34;
-  border-bottom: 3.8rem solid #d13e34;
+  border-bottom: 3.9rem solid #d13e34;
 }
 
 .instructor-attendance-history-pill.bad:hover,
 .instructor-attendance-history-pill.bad:focus {
   outline: none;
   box-shadow: 0px 0px 10px 7px rgba(255, 99, 88, 0.36);
+}
+
+.instructor-attendance-history-pill.live {
+  outline: 0.25rem solid #04852f;
+  outline-offset: 0.5rem;
 }
 
 .instructor-attendance .month-area,
