--- a/src/assets/css/venue-core.css
+++ b/src/assets/css/venue-core.css
@@ -222,70 +222,6 @@ body {
   float: right;
 }
 
-.student-attendance-pill {
-  height: 58px;
-  width: 220px;
-  border: 2px solid grey;
-  border-radius: 5px;
-  background-color: white;
-  font-size: 0.8rem;
-  cursor: pointer;
-  margin-bottom: 40px;
-  margin-right: 20px;
-}
-
-.student-attendance-pill.absent {
-  border: 2px solid #FB5959;
-  box-shadow: 0px 3px 10px rgba(162, 72, 65, 0.16);
-}
-
-.student-attendance-pill.present {
-  border: 2px solid #47E97D;
-  box-shadow: 0px 3px 10px rgba(65, 162, 91, 0.33);
-}
-
-.student-attendance-pill.absent .date-area {
-  background-color: #FB5959;
-}
-
-.student-attendance-pill.present .date-area {
-  background-color: #47E97D;
-}
-
-.student-attendance-pill .date-area {
-  width: 50px;
-  /* margin-left: -15px; */
-  background-color: red;
-  height: 100%;
-  text-align: center;
-  line-height: 20px;
-  color: white;
-}
-
-.student-attendance-pill .event-info-area {
-  margin-left: 10px;
-  line-height: 17px;
-  position: relative;
-  top: -5px;
-}
-
-.student-attendance-pill .event-info-area .event-name {
-
-}
-
-.student-attendance-pill .event-info-area .event-location {
-  color: rgba(0, 0, 0, 0.59);
-  font-size: 0.7rem;
-}
-
-.history-by-month {
-  margin-top: 25px;
-}
-
-.history-by-month .month-title {
-  margin-bottom: 20px;
-}
-
 .instructor-attendance {
   /* padding-left: 50px; */
 }
@@ -325,7 +261,7 @@ body {
 }
 
 .instructor-attendance-history-pill {
-  border: 2px solid red;
+  border: 2px solid #d13e34;
   border-radius: 5px;
   margin-right: 1rem;
   margin-bottom: 1rem;
@@ -344,7 +280,7 @@ body {
   bottom: 0;
   width: 20%;
   padding-top: 0.15rem;
-  background-color: red;
+  background-color: #d13e34;
   height: 100%;
   text-align: center;
   color: white;
@@ -355,7 +291,7 @@ body {
 .student-attendance .instructor-attendance-history-pill .date-area {
   width: 20%;
   /* margin-left: -15px; */
-  background-color: red;
+  background-color: #d13e34;
   height: 100%;
   text-align: center;
   color: white;
